fix: focus in highcontrast mode (refs SFKUI-6909)

--- a/packages/design/src/core/mixins/_focus.scss
+++ b/packages/design/src/core/mixins/_focus.scss
@@ -1,4 +1,5 @@
 @mixin focus-indicator() {
     border-radius: 0;
     box-shadow: var(--f-focus-box-shadow);
+    outline: 2px solid transparent; // Windows high contrast
 }
